oxiplate-derive/tests/broken/group-instead-of-tuple.stderr
warning: unnecessary parentheses around `let` scrutinee expression
 --> tests/broken/group-instead-of-tuple.rs:6:19
  |
6 | {%- if let (a,) = (a) -%}
  |                   ^
  |
  = note: `#[warn(unused_parens)]` on by default

error[E0308]: mismatched types
 --> tests/broken/group-instead-of-tuple.rs:6:12
  |
6 | {%- if let (a,) = (a) -%}
  |            ^^^^    - this expression has type `usize`
  |            |
  |            expected `usize`, found `(_,)`
  |
  = note: expected type `usize`
            found tuple `(_,)`
